--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "nodemon": "^2.0.15"
+    "inquirer": "^8.2.0",
+    "nodemon": "^2.0.15",
+    "yargs": "^17.3.1"
   }
 }
